<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.74"
        android:layout_margin="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_field"
            android:layout_weight="1"
            android:hint="@string/email"
            android:textAlignment="center"
            android:background="@color/color3.1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/confirm_email"
            android:layout_weight="1"
            android:hint="@string/confirm_email"
            android:textAlignment="center"
            android:background="@color/color3.1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_field"
            android:hint="@string/password"
            android:textAlignment="center"
            android:layout_weight="1"
            android:background="@color/color3.1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirm_password"
            android:hint="@string/password"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@color/color3.1"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/secQuestion"
            android:layout_weight="1"
            android:hint="@string/country"
            android:background="@color/color3.1"
            android:textAlignment="center"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/answer_secQuestion"
            android:layout_weight="1"
            android:textSize="15dp"
            android:hint="@string/city"
            android:background="@color/color3.1"
            android:textAlignment="center"/>

    </LinearLayout>

    <Button
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_SignIn"
        android:background="@drawable/curve_background"
        android:onClick="btn_ToWelcome"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"/>

</LinearLayout>