<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome_final"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="116dp"
        app:srcCompat="@drawable/logo14"
        android:id="@+id/imageView3" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:background="@color/color1.1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_field"
            android:hint="@string/login"
            android:textColorHint="@android:color/black"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:background="@color/color1.1"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_field"
            android:textColorHint="@android:color/black"
            android:hint="@string/password"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:background="@color/color1.1"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color1.1">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/checkBox2"
            android:checked="false"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="@string/remember_email"
            android:background="@color/color1.1"/>

        <TextView
            android:text="@string/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:paddingLeft="35dp"
            android:paddingTop="10dp"
            android:background="@color/color1.1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="20dp">

        <Button
            android:text="@string/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_SignIn"
            android:background="@drawable/curve_background"
            android:textColor="@android:color/black"
            android:onClick="ButtonSignIn"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>

        <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:background="@drawable/curve_background"
            android:onClick="ButtonRegister"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


</LinearLayout>