<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome_final"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="113dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="116dp"
            app:srcCompat="@drawable/logo14"
            android:id="@+id/imageView3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.74"
        android:layout_marginBottom="10dp"
        android:background="@color/color1.1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_field"
            android:layout_weight="1"
            android:textColorHint="@color/color4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@color/color1.1"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/confirm_email"
            android:layout_weight="1"
            android:textColorHint="@color/color4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@color/color1.1"
            android:hint="@string/confirm_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_field"
            android:hint="@string/password"
            android:layout_weight="1"
            android:textColorHint="@color/color4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@color/color1.1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirm_password"
            android:hint="@string/confirm_password"
            android:layout_weight="1"
            android:textColorHint="@color/color4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:background="@color/color1.1"/>

    </LinearLayout>

    <Button
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_SignIn"
        android:background="@drawable/curve_background"
        android:onClick="btn_ToWelcome"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"/>

</LinearLayout>